# sidra_server

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Makefile  TODO.md  extension_config.cmake
.claude/skills/pac-privacy-reference/: SKILL.md
.claude/skills/pac-privacy-reference/references/: pac-literature.md
.claude/skills/privacy-systems-literature/: SKILL.md
.claude/skills/privacy-systems-literature/references/: classic-dp-platforms.md  decentralized-analytics.md  ivm-streaming-systems.md  privacy-attacks.md  secure-analytics.md  sidra-literature.md  sql-dp-systems.md  streaming-dp.md
.claude/skills/sidra-architecture/: SKILL.md
.github/workflows/: MainDistributionPipeline.yml
data/: server.config  tables.sql
examples/: client.sql  server.sql  server_flush.sql
src/: server_extension.cpp
src/common/: common.cpp
src/compiler/: compiler_utils.cpp  generate_python_script.cpp
src/flush/: flush_function.cpp  update_metrics.cpp
src/include/: common.hpp  compiler_utils.hpp  flush_function.hpp  generate_python_script.hpp  helpers.hpp  optimizer.hpp  parse_select.hpp  parse_table.hpp  parse_view.hpp  parser.hpp  parser_helper.hpp  parser_helpers.hpp  run_server.hpp  server_debug.hpp  server_extension.hpp  update_metrics.hpp
src/optimizer/: optimizer.cpp
src/parser/: parse_select.cpp  parse_table.cpp  parse_view.cpp  parser.cpp  parser_helper.cpp  parser_helpers.cpp
src/server/: run_server.cpp
test/sql/: flush.test  parser.test  query_checker.test
